
- Mon Dec  8 21:26 MET 2008 (Rudi)
  - Modules can now modify the cmds hash, i.e. modules can add / overwrite /
    delete internal fhem commands. See 99_XmlList.pm for an example. Since this
    modules is called 99_xxx, it will be always loaded, but user of webpgm2 do
    not need it.

- Wed Dec 17 19:48 (Boris)
  - attribute rainadjustment for KS300 in 13_KS300.pm to account for random
    switches in the rain counter (see commandref.html)

- Fri Jan  2 10:29 2009 (Rudi)
  - 00_CUL responds to CUR request. These are sent as long FS20 messages, with
    a housecode stored in CUR_id_list attribute of the CUL device. If the ID
    matches, the message is analyzed, and an FS20 message to the same address
    is sent back. The CUR must have reception enabled.
    Right now status/set time/set FHT desired temp are implemented.

- Fri Jan  6 (Boris)
  - daily/monthly cumulated values for EMWZ/EMGZ/EMWM with 15_CUL_EM by Klaus

- Fri Jan  9
  - Added a unified dispatch for CUL/FHZ and CM11, since all of them used the
    same code.
  - Addedd IODev attribute to FS20/FHT/HMS/KS300/CUL_WS/CUL/EMWZ/EMGZ/EMEM
- Sun Jan 11 (Klaus)
  - Added fixedrange option day|week|month|year (for pgm2)
    e.g.: attr wlEnergiemonat fixedrange month
  - Added multiple room assignments for one device (for pgm2):
    e.g.: attr Heizvorlauftemp room Energie,Heizung
  - Added attr title and label(s) for more flexible .gplot files (for pgm2)
    e.g.: attr wl_KF title "Fenster:".$value{KellerFenster}.", Entfeuchter: ".$value{Entfeuchter}
          .gplot: <TL> (is almost there!)
          attr wl_KF label "Fenster":"Entfeuchter"
          .gplot: <L0> ... <L9> (constant text is to be replaced individually)
  - Added attr global logdir, used by wildcard %ld in perl.pm
    e.g.: attr global logdir /var/tmp
          define emGaslog FileLog %ld/emGas.log emGas:.*CNT.*

- Sat Feb 15 2009 (Boris)
  - added counter differential per time in 81_M232Counter.pm, commandref.html
    updated

