@@ -78,3 +78,7 @@
 
 - Martin 2008-14-13
  -- Bugfix: FHT: lime-protection not more in the field of actuator
+
+- Martin 2009-03-2
+  -- Bugfix: table-format for userdefs changed
+  -- Feature: taillogor der optional with date (config.php)
